[package]
name = "syrinx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"                                              # MIT/Apache-2.0
log = "0.4.14"                                              # MIT or Apache-2.0
pretty_env_logger = "0.4.0"                                    # MIT/Apache-2.0
reqwest = { version = "0.11.6", features = ["json"] }          # MIT/Apache-2.0
tokio = { version = "1", features = ["full"]}                             # MIT
