[package]
name = "syrinx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"                                              # MIT/Apache-2.0
fastrand = "1"                                              # MIT or Apache-2.0
log = "0.4.14"                                              # MIT or Apache-2.0
phf = { version = "0.10.0", features = ["macros"] }                       # MIT
pretty_env_logger = "0.4.0"                                    # MIT/Apache-2.0
regex = "1"                                                 # MIT or Apache-2.0
reqwest = { version = "0.11.6", features = ["json"] }          # MIT/Apache-2.0
serde = { version = "1.0", features = ["derive"] }          # MIT or Apache-2.0
symphonia = { version = "0.4", features = ["default", "mp3"] }        # MPL-2.0
tokio = { version = "1", features = ["full"]}                             # MIT
walkdir = "2"                                                # MIT or UNLICENSE
